--- a/templates/websites.html
+++ b/templates/websites.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Websites - Community Platform</title>
+    <meta property="og:title" content="Websites - Community Platform">
+    <link rel="icon" type="image/png" href="/static/logo.png">
     <style>
     * {
         margin: 0;
@@ -384,11 +386,6 @@
 
     .icon-code::before {
         content: "💻";
-        font-size: 14px;
-    }
-
-    .icon-github::before {
-        content: "🔗";
         font-size: 14px;
     }
 
